dropshot/tests/fail/bad_server_endpoint6b.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> tests/fail/bad_server_endpoint6b.rs:24:5
   |
24 |     pub async fn bad_endpoint(
   |     ^^^
   |
   = note: trait items always share the visibility of their trait

error: cannot find attribute `endpoint` in this scope
  --> tests/fail/bad_server_endpoint6b.rs:20:7
   |
20 |     #[endpoint {
   |       ^^^^^^^^
   |
help: consider importing one of these items
   |
5  + use dropshot::endpoint;
   |
5  + use dropshot_endpoint::endpoint;
   |
